crates/forge_main/src/app/dto/openai/snapshots/forge_main__app__dto__openai__request__tests__user_message_conversion.snap
---
source: crates/forge_main/src/app/dto/openai/request.rs
expression: router_message
---
{
  "role": "user",
  "content": "Hello"
}
